2002-03-08 Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Update to Autoconf 2.53 (new release)
  * Update to Automake 1.6 (new release)

2002-03-07  Cristy  <cristy@mystic.es.dupont.com>
  * Bob Friesenhahn's execution profile results in a number of speed-ups
    with a faster LocaleCompare() algorithm and self-adjusting lists.
  * Recognize additional DCM metadata (suggested by Barry Branham).
  * Fixed CopyOpacity composite operator for CMYKA images.

2002-03-06  Cristy  <cristy@mystic.es.dupont.com>
  * Inlined AlphaComposite() and ValidateColormapIndex().
  * Corrected compositing algorithm for the case where both source and
    destination pixels had opacity values that were neither fully transparent
    nor fully opaque.

2002-03-05  Cristy  <cristy@mystic.es.dupont.com>
  * Memory overrun when drawing large circles.

2002-03-04  Cristy  <cristy@mystic.es.dupont.com>
  * Removed bug introduced into Bob's Base64Encode() method.

2002-03-02  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Added Base64Decode() and Base64Encode() to utility.c and updated
    ReadInlineImage() in magick/constitute.c to use Base64Decode().

2002-03-01  Cristy  <cristy@mystic.es.dupont.com>
  * GetTypeInfoByFamily() null pointer fault (reported by Bob Friesenhahn).
  * Added module version number (patch by Glenn Randers-Pehrson).

2002-03-01  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * image->matte was not being set when reading GRAY-ALPHA PNG files.

2002-02-26  Cristy  <cristy@mystic.es.dupont.com>
  * Potential infinite loop in SyncBlob() (reported by  Vladimir Faiden).

2002-02-26  Cristy  <cristy@mystic.es.dupont.com>
  * Gravity not respected when drawing text with the convert program.

2002-02-21  Cristy  <cristy@mystic.es.dupont.com>
  * MPEG multi-part filenames require an embedded %d, not %lu.
  * WriteStream() did not write to fifo (thanks to William Radcliffe).

2002-02-20  Cristy  <cristy@mystic.es.dupont.com>