@@ -121,6 +121,43 @@ static Image *ReadNULLImage(const ImageInfo *image_info,
 %                                                                             %
 %                                                                             %
 %                                                                             %
+%   W r i t e N U L L I m a g e                                               %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  Method WriteNULLImage writes no output at all. It is useful when specified
+%  as an output format when profiling.
+%
+%  The format of the WriteNULLImage method is:
+%
+%      unsigned int WriteNULLImage(const ImageInfo *image_info,Image *image)
+%
+%  A description of each parameter follows.
+%
+%    o status: Always returns True.
+%
+%    o image_info: Specifies a pointer to an ImageInfo structure.
+%
+%    o image:  A pointer to a Image structure.
+%
+%
+*/
+static unsigned int WriteNULLImage(const ImageInfo *image_info,Image *image)
+{
+  assert(image_info != (const ImageInfo *) NULL);
+  assert(image_info->signature == MagickSignature);
+  assert(image != (Image *) NULL);
+  assert(image->signature == MagickSignature);
+  return True;
+}
+
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
 %   R e g i s t e r N U L L I m a g e                                         %
 %                                                                             %
 %                                                                             %
@@ -146,6 +183,7 @@ ModuleExport void RegisterNULLImage(void)
 
   entry=SetMagickInfo("NULL");
   entry->decoder=ReadNULLImage;
+  entry->encoder=WriteNULLImage;
   entry->adjoin=False;
   entry->description=AllocateString("Constant image of uniform color");
   entry->module=AllocateString("NULL");
